--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-rs-extension-search</artifactId>
             <version>3.3.4</version>
+            <exclusions>
+            	<exclusion>
+            		<groupId>org.jvnet.staxex</groupId>
+            		<artifactId>stax-ex</artifactId>
+            	</exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
