--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.talend</groupId>
     <artifactId>tmc_rest_api</artifactId>
-    <version>2.6.0-SNAPSHOT</version>
+    <version>2.6.0</version>
 
     <build>
         <plugins>
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.13.0</version>
+            <version>[2.15.0,)</version>
         </dependency>
         <dependency>
             <groupId>org.apache.cxf</groupId>
